[package]
name = "backforge"
version = "0.1.0"
edition = "2021"
description = "A TUI backend generator and playground"

[[bin]]
name = "backforge"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
which = "6.0"
percent-encoding = "2.3"

[profile.release]
opt-level = 3
